--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,21 @@
 <html lang="ru">
 
 <head>
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(54981517, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/54981517" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="preload" href="img/2.png" as="image">
@@ -175,9 +190,14 @@
 	<div id="modal-six" class="iziModal" data-izimodal-title="Английский язык">
 		<img src="img/directions/english.jpg" alt=""/>
 		<br>
-		<p class="p">Телефон для получения информации по данному направлению: 61-10-81, +7 (987) 981-66-71</p>
-		<p class="p">В скором времени детали будут добавлены на сайт. </p>
-		<p class="p p-free-lesson">Можно записаться на <span class="green">бесплатное</span> пробное занятие.</p>
+		<p class="p">Для детей от 5 до 10 лет.</p>
+		<p class="p">На наших занятиях мы постараемся научить ваших детей общаться на английском языке, понимать его, выработать правильное произношение, знать основы и конструкции, которые пригодятся при изучении языка в школе. </p>
+        <p class="p">Ваши детки смогут поделиться своими достижениями с вами, а также станут незаменимыми помощниками в зарубежных поездках. </p>
+        <p class="p">Материал подаётся в игровой форме с рисованием, лепкой, музыкой и другими видами творчества, что позволяет детям сохранять интерес к языку в течение всего занятия.</p>
+        <p class="p">Важно помнить: недостаточно знать слова и уметь составлять из них предложения.</p>
+        <p class="p">Язык можно выучить, если только часто говорить на нём. Поэтому родителям рекомендуется повторять с детьми пройденные темы, проговаривая вместе слова и фразы, которые даются на каждом занятии.</p>
+
+        <p class="p p-free-lesson">Можно записаться на <span class="green">бесплатное</span> пробное занятие.</p>
 		<div class="modal-button-grp">
 			<a href="/" data-izimodal-close class="header-button modal-button modal-button-left">Назад</a>
 			<a href="/" data-izimodal-open=".iziModal-assign" data-izimodal-transitionin="fadeInDown" class="iziModal-assign-button header-button modal-button modal-button-right" data="test6">Записаться</a>
@@ -531,7 +551,7 @@
 									<div class="img-wrapper">
 										<img class="img" src="img/teachers/teacher4.jpg" alt="">
 									</div>
-									<h2 class="h2">Елизавета Демакова</h2>
+									<h2 class="h2">Елизавета Ширшова</h2>
 									<p class="p">Руководитель Лаборатории современного танца.
 										Хореограф-постановщик. <br>
 										"Мое призвание - Танец!"
@@ -588,7 +608,7 @@
 					</section>
 
 					<section class="s-video header-flex flex-center">
-						<div class="left-bg-image" style="background-image: url(img/video/left_bg_image.jpg);"></div>
+						<div id="video-left-bg-image" class="left-bg-image" style="background-image: url(img/video/left_bg_image.jpg);"></div>
 
 						<div class="container about">
 							<div class="row">
@@ -602,8 +622,14 @@
 									<i class="fa fa-play"></i>
 								</a>
 							</div>
+
+							<div class="row" id="video_buttons">
+								<a href="#" data-toggle="tab" class="video_button active header-button">Видео 1</a>
+								<a href="#" data-toggle="tab" class="video_button header-button">Видео 2</a>
+								<a href="#" data-toggle="tab" class="video_button header-button">Видео 3</a>
+							</div>
 						</div>
-						<div class="right-bg-image" style="background-image: url(img/video/right_bg_image.jpg);"></div>
+						<div id="video-right-bg-image" class="right-bg-image" style="background-image: url(img/video/right_bg_image.jpg);"></div>
 					</section>
 
 					<section class="s-photo header-flex flex-center">
